--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -29,10 +29,12 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_toEndOf="@+id/timetableItemTimeStart"
         android:layout_toRightOf="@+id/timetableItemTimeStart"
+        android:layout_toLeftOf="@id/timetableItemTimeLeft"
+        android:layout_toStartOf="@id/timetableItemTimeLeft"
         android:ellipsize="end"
         android:maxLines="1"
         android:textSize="15sp"
@@ -108,13 +110,35 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="0dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_toEndOf="@+id/timetableItemTimeStart"
         android:layout_toRightOf="@+id/timetableItemTimeStart"
+        android:layout_toLeftOf="@id/timetableItemTimeLeft"
+        android:layout_toStartOf="@id/timetableItemTimeLeft"
         android:textColor="?colorTimetableChange"
         android:textSize="13sp"
         tools:text="Lekcja odwołana: uczniowie zwolnieni do domu"
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/timetableItemTimeLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_alignTop="@id/timetableItemNumber"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:textColor="?colorPrimary"
+        android:textSize="16sp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:text="15 min" />
 
 </RelativeLayout>
