Add time left background

--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -124,19 +124,23 @@
     <TextView
         android:id="@+id/timetableItemTimeLeft"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:gravity="center"
-        android:layout_alignTop="@id/timetableItemNumber"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textColor="?colorPrimary"
-        android:textSize="16sp"
+        android:textColor="?colorOnPrimary"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@drawable/background_timetable_time_left"
+        android:textSize="14sp"
         android:visibility="gone"
         tools:visibility="visible"
         tools:text="15 min" />
