--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -6,8 +6,8 @@
     android:paddingStart="8dp"
     android:paddingLeft="8dp"
     android:paddingTop="6dp"
-    android:paddingEnd="12dp"
-    android:paddingRight="12dp"
+    android:paddingEnd="8dp"
+    android:paddingRight="8dp"
     android:paddingBottom="6dp"
     tools:context=".ui.modules.timetable.TimetableItem">
 
@@ -124,25 +124,23 @@
     <TextView
         android:id="@+id/timetableItemTimeLeft"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:maxLines="2"
+        android:layout_alignTop="@id/timetableItemSubject"
+        android:layout_alignBottom="@id/timetableItemSubject"
+        android:maxLines="1"
         android:ellipsize="end"
         android:textColor="?colorOnPrimary"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:background="@drawable/background_timetable_time_left"
-        android:textSize="14sp"
+        android:textSize="13sp"
         android:visibility="gone"
         tools:visibility="visible"
-        tools:text="15 min" />
+        tools:text="jeszcze 15 min " />
 
 </RelativeLayout>
