--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -122,6 +122,27 @@
         tools:visibility="visible" />
 
     <TextView
+        android:id="@+id/timetableItemTimeUntil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@id/timetableItemSubject"
+        android:layout_alignBottom="@id/timetableItemSubject"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="?colorPrimary"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:textSize="13sp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:text="za 15 min" />
+
+    <TextView
         android:id="@+id/timetableItemTimeLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -140,7 +161,7 @@
         android:background="@drawable/background_timetable_time_left"
         android:textSize="13sp"
         android:visibility="gone"
-        tools:visibility="visible"
-        tools:text="jeszcze 15 min " />
+        tools:visibility="gone"
+        tools:text="jeszcze 15 min" />
 
 </RelativeLayout>
